2004-04-05  Angus Leeming  <angus.leeming@btopenworld.com>

	* Dummy commit to check all is well with my account.

2004-04-01  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/flresource.c (fl_get_resource): when a resource is a
	FL_STRING, avoid doing a strncpy of a string over itself (triggers
	a valgrind report)

2004-03-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* README: mention the --enable-demos and --disable-gl flags, which
	got forgotten

2004-03-30  Hans J. Johnson <hjohnson@mail.psychiatry.uiowa.edu>
	
	* lib/pixmap.c (cleanup_xpma_struct): use a better check for
	libXpm version

2004-03-30  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* XForms 1.0.90 released
	
	* NEWS: 
	* README: update for 1.0.90

	* configure.ac: set version to 1.0.90. Use XFORMS_CHECK_VERSION

	* config/xformsinclude.m4 (XFORMS_CHECK_VERSION): merge
	XFORMS_SET_VERSION and XFORMS_CHECK_VERSION. Set PACKAGE here and
	read version from PACKAGE_VERSION (set by AC_INIT). Remove
	detection of prereleases. Development versions are now versions
	with minor version number >= 50.

	* README: small update

	* configure.ac: add new define RETSIGTYPE_IS_VOID
	
	* lib/signal.c: fix handling of RETSIGTYPE

2003-12-02  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Makefile.am: enable 'make -j2' to work on a
	multi-processor machine.

	* demos/Makefile.am: handle the .fd -> .c conversion in
	automake-standard fashion.

	* lib/include/Makefile.am: pass sed the names of the files to
	be manipulated as '${srcdir}/`basename $$i`' rather than as
	'${srcdir}/$$i' or things go awol on the Dec. (Running ksh, fwiw.)

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* Makefile.am: re-add xforms.spec to EXTRA_DIST. It is needed as well
	as xforms.spec.in or else 'make rpmdist' will fail.

2003-11-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_attribs.c:
	* image/image_jpeg.c:
	* image/image_xwd.c: